; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/extr_perf_event_intel_lbr.c_intel_pmu_lbr_init_snb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/extr_perf_event_intel_lbr.c_intel_pmu_lbr_init_snb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32, i32, i32 }

@x86_pmu = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@MSR_LBR_TOS = common dso_local global i32 0, align 4
@MSR_LBR_NHM_FROM = common dso_local global i32 0, align 4
@MSR_LBR_NHM_TO = common dso_local global i32 0, align 4
@LBR_SEL_MASK = common dso_local global i32 0, align 4
@snb_lbr_sel_map = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"16-deep LBR, \00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @intel_pmu_lbr_init_snb() #0 {
  store i32 16, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @x86_pmu, i32 0, i32 0), align 4
  %1 = load i32, i32* @MSR_LBR_TOS, align 4
  store i32 %1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @x86_pmu, i32 0, i32 5), align 4
  %2 = load i32, i32* @MSR_LBR_NHM_FROM, align 4
  store i32 %2, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @x86_pmu, i32 0, i32 4), align 4
  %3 = load i32, i32* @MSR_LBR_NHM_TO, align 4
  store i32 %3, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @x86_pmu, i32 0, i32 3), align 4
  %4 = load i32, i32* @LBR_SEL_MASK, align 4
  store i32 %4, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @x86_pmu, i32 0, i32 2), align 4
  %5 = load i32, i32* @snb_lbr_sel_map, align 4
  store i32 %5, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @x86_pmu, i32 0, i32 1), align 4
  %6 = call i32 @pr_cont(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @pr_cont(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
